<resources>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_name">Fruit Collector</string>

    <string name="login">Login</string>
    <string name="register_here">Belum punya akun? Daftar disini</string>
    <string name="Feature_on_progress">Fitur sedang tahap pengembangan.</string>
    <string name="required">Wajib diisi</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="name">Nama</string>
    <string name="phone">Telepon</string>
    <string name="talk_back_btn_back">Tombol kembali</string>
    <string name="home">Home</string>
    <string name="account">Akun</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="land_area">Luas Lahan</string>
    <string name="number_of_tree">Jumlah Pohon</string>
    <string name="production_estimate">Estimasi Produksi (Kg)</string>
    <string name="add_farmer">Tambah Petani</string>
    <string name="save">Simpan</string>
    <string name="land_location">Lokasi Lahan</string>
    <string name="farmer">Petani</string>
    <string name="delete">Hapus</string>
    <string name="valid">Valid</string>
    <string name="validation">Validasi</string>
    <string name="commodity_validation_message">Jika catatan telah di validasi, maka data tidak dapat dirubah.</string>
    <string name="commodity_details">Detail Komoditas</string>
    <string name="tree_blossom_date">Tanggal Pohon Berbunga</string>
    <string name="harvest_date">Tanggal Panen</string>
    <string name="fruit_grade">Grade atau Kualitas Buah</string>
    <string name="harvest_result">Berat Hasil Panen</string>
    <string name="customer">Pelanggan</string>
    <string name="create_transaction">Buat Transaksi</string>
    <string name="price_per_kg">Harga / Kg</string>
    <string name="next">Lanjut</string>

    <string name="price_per_kg_from_farmer_with_value">Harga dari petani %s / Kg</string>
    <string name="price_per_kg_with_value">Harga %s / Kg</string>
    <string name="fruit_name_and_grade">%1$s (%2$s)</string>
    <string name="harvest_date_with_date">Tanggal panen: %s</string>
    <string name="stock_with_value">Stok: %d Kg</string>
    <string name="something_went_wrong_with_message">Terjadi kesalahan: %s</string>
    <string name="welcome_user">Halo, %s</string>

    <string name="successful_transaction">Transaksi Berhasil</string>
    <string name="transaction_create_at">Transaksi dibuat pada tanggal %s.</string>
    <string name="many_stock">x%d Kg</string>
</resources>